Update schedule, image changes, fixes * LIS:DE complete, Astro Bot next * Lazy load images   * Images were all moved to img elements instead of css backgrounds to accomodate this   * Added invisible text elements to logos to allow for game name searching * Hypnospace css fixes * Fix thin card rating alignment

--- a/hypnospace.css
+++ b/hypnospace.css
@@ -1,3 +1,4 @@
+
 body {
     background-image: url('hypnospace/brick-dark.png');
     font-family:'Courier New', Courier, monospace !important;
@@ -8,6 +9,10 @@ li:not(.divider) {
     outline-style: inset !important;
     outline-width: 5px !important;
     border-radius: 0px !important;
+}
+
+li::before {
+    display: none;
 }
 
 .divider {
